@@ -20,6 +20,8 @@
 	  (by Yair K.)
 	* configure.in: configure: Fix building with X11 based
 	  userinterfaces builtin (Reported by Yair K.)
+	* interface/xaw_i.c, interface/xdnd.c: Fix compiler warnings
+	  from clang (by Yair K.)
 
 2011-12-30  TAMUKI Shoichi <tamuki@linet.gr.jp>
 
